# NeuroSploit

./: .env.example  .gitignore  README.md  RELEASE.md  TUTORIAL.md
agents_md/chains/: chain_default_creds_to_domain.md  chain_deserialization_to_rce.md  chain_exposed_git_to_rce.md  chain_idor_to_takeover.md  chain_sqli_to_rce_to_lpe.md  chain_ssrf_to_aws_compromise.md  chain_ssrf_to_rce.md  chain_ssti_to_rce_to_cloud.md  chain_subdomain_takeover_to_phishing.md  chain_upload_lfi_rce_lpe.md  chain_upload_to_rce.md  chain_xss_to_account_takeover.md
backend/api/v1/: agent.py  settings.py
backend/core/: autonomous_agent.py
legacy/: README.md  test_agent_run.py
legacy/backend_fastapi/: config.py  main.py  requirements.txt
legacy/backend_fastapi/api/: websocket.py
legacy/backend_fastapi/core/: access_control_learner.py  adaptive_learner.py  agent_base.py  agent_memory.py  agent_orchestrator.py  agent_tasks.py  (+46 more)
legacy/core/: browser_validator.py  container_pool.py  context_builder.py  kali_sandbox.py  knowledge_augmentor.py  llm_manager.py  mcp_client.py  mcp_server.py  model_router.py  pentest_executor.py  report_generator.py  sandbox_manager.py  scheduler.py  tool_installer.py  tool_registry.py
legacy/frontend_react/: index.html  package-lock.json  package.json  tailwind.config.js
neurosploit-rs/: Cargo.toml
neurosploit-rs/app/: Cargo.toml
neurosploit-rs/app/src/: main.rs  repl.rs
neurosploit-rs/templates/: report.typ
neurosploit_agent/: backends.py  models.py  orchestrator.py  report.py
scripts/: build_chain_agents.py
webgui/: index.html  server.py
(+116 files in other folders)
